improve user authority management
