# drivers/api/handler/v2/login.go
@@ -3,6 +3,7 @@ package v2
 import (
 	"fmt"
 	"net/http"
+	"sync"
 	"time"
 
 	"github.com/actiontech/dtle/drivers/api/handler"
@@ -12,6 +13,8 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/mojocn/base64Captcha"
 )
+
+var once sync.Once
 
 // @Summary user login
 // @Description user login
@@ -23,7 +26,7 @@ import (
 func Login(c echo.Context) error {
 	logger := handler.NewLogger().Named("UserList")
 	logger.Info("validate params")
-
+	once.Do(createPlatformUser)
 	reqParam := new(models.UserLoginReqV2)
 	if err := c.Bind(reqParam); nil != err {
 		return c.JSON(http.StatusInternalServerError, models.BuildBaseResp(fmt.Errorf("bind reqParam param failed, error: %v", err)))
@@ -101,4 +104,16 @@ func CaptchaV2(c echo.Context) error {
 		return c.JSON(http.StatusOK, models.BuildBaseResp(err))
 	}
 	return c.JSON(http.StatusOK, models.CaptchaRespV2{Id: id, DataScheme: b64s})
+}
+
+func createPlatformUser() {
+	logger := handler.NewLogger().Named("CreatePlatformUser")
+	user := &common.User{
+		Username:   common.DefaultAdminUser,
+		Tenant:     common.DefaultAdminTenant,
+		Role:       common.DefaultRole,
+		Password:   common.DefaultAdminPwd,
+		CreateTime: time.Now().In(time.Local).Format(time.RFC3339),
+	}
+	_ = createUser(logger, user)
 }
